--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,13 @@
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
-			<version>1.23.0</version>
+                        <version>1.23.0</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>com.google.guava</groupId>
+                                <artifactId>guava-jdk5</artifactId>
+                            </exclusion>
+                        </exclusions>
 		</dependency>
 
 
