Fix Angular attributes to device icons
Adds test script to run before each commit

Fix #28

Change-Id: I4140271bb17b121fbb243b50917410ed91b04e15

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /target
 # Compiled files
 /src/main/webapp
+src/main/ngapp/node/
 # Pulled-in dependencies
 /src/main/ngapp/node_modules
 /src/main/ngapp/package-lock.json
