--- a/pom.xml
+++ b/pom.xml
@@ -79,13 +79,13 @@
 		<dependency>
 			<groupId>com.google.api-client</groupId>
 			<artifactId>google-api-client</artifactId>
-                        <version>1.23.0</version>
-                        <exclusions>
-                            <exclusion>
-                                <groupId>com.google.guava</groupId>
-                                <artifactId>guava-jdk5</artifactId>
-                            </exclusion>
-                        </exclusions>
+			<version>1.23.0</version>
+			<exclusions>
+					<exclusion>
+							<groupId>com.google.guava</groupId>
+							<artifactId>guava-jdk5</artifactId>
+					</exclusion>
+			</exclusions>
 		</dependency>
 
 
@@ -294,23 +294,59 @@
                 <exclude>ngapp/**</exclude>
             </excludes>
         </configuration>
-    </plugin>
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.0.0</version>
-        <configuration>
-            <excludes>
-                <exclude>ngapp/**</exclude>
-            </excludes>
-        </configuration>
-    </plugin>
-    <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.5.0</version>
-        
-    </plugin>
+			</plugin>
+			<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>3.0.0</version>
+					<configuration>
+							<excludes>
+									<exclude>ngapp/**</exclude>
+							</excludes>
+					</configuration>
+			</plugin>
+			<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>1.5.0</version>
+			</plugin>
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<!-- Use the latest released version:
+        https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/ -->
+				<version>1.8.0</version>
+				<configuration>
+					<nodeVersion>v10.16.3</nodeVersion>
+					<workingDirectory>src/main/ngapp</workingDirectory>
+				</configuration>
+				<executions>
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>NPM install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+					<execution>
+						<id>NPM build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<extensions>
 			<extension>
