Add gradle wrapper
Change-Id: Ib085c70c111e171a66aa5f49475fcabb0227e3c7

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ src/main/ngapp/node/
 # Pulled-in dependencies
 /src/main/ngapp/node_modules
 /src/main/ngapp/package-lock.json
+.gradle/
 .idea/
 .settings/
